# qside-zero

./: .gitignore  README.md
qside-mobile/: package-lock.json  package.json
qside-mobile/app/[...slug]/: page.tsx
qside-mobile/app/qrmagic/: page.tsx
qside-mobile/components/: magichome.tsx
qside-mobile/components/auth/: googleLogin.tsx
qside-mobile/components/profile/: profile-card-1.tsx  profile-card.tsx  style.css
qside-mobile/src-tauri/: Cargo.toml
qside-next/: bun.lockb  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
qside-next/app/: layout.tsx  page.tsx
qside-next/components/: abc.json  magic.tsx  magichome.tsx
qside-next/src-tauri/: .gitignore  Cargo.toml  document.html  tauri.conf.json
qside-py/: .gitignore  README.md  pyproject.toml
qside-py/src/: __init__.py  app.py  routes.py
qside-py/src/api/: chat.py  connections.py  posts.py  spaces.py  test.py  users.py
qside-py/src/api/character/: character.py  fact.py  memory.py
qside-py/src/libs/: agent_engine.py  clients.py  config.py
qside-py/src/libs/auth/: jwt_bearer.py
qside-py/src/libs/callbacks/: ActionSendCallbackHandler.py
qside-py/src/libs/tools/: get_word_count.py  search_internet.py
qside-py/src/models/: chat.py
qside-py/src/research/: agent.ipynb  agent_01.ipynb  agent_no_langchain.ipynb
qside-server/: .gitignore  Cargo.toml  document.html
qside-server/src/: main.rs
qside-server/src/handlers/: mod.rs
qside-server/src/models/: mod.rs
qside-server/src/routes/: mod.rs
shared-components/: bun.lockb  next.config.mjs  package.json  tailwind.config.ts
(+73 files in other folders)
